@@ -234,3 +234,4 @@ Issue #2019345 by johnv: Added workflow_cleanup now uses WorkflowState class.
 Issue #2019345 by johnv: Moved workflow_state functions to workflow.deprecated.inc, since they are all replaced by Workflow State class.
 Issue #2116179 by johnv: Moved workflow_type_map functions to own file workflow.node.type_map.inc.
 Issue #2019345 by johnv: Fixed notice on workflow_tab_form when a node type has both Workflow_node and Workflow_field enabled.
+Issue #2019345 by johnv: Moved code from workflow_admin_ui to Workflow->validate(), and added this check to Field settings form.
